Try to add missing module path manually